# tauri_react_vite_ts_script_antd_i18next_tokio_styled_v1

./: .eslintrc.cjs  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: main-lint-test-deploy.yml
change-name-owner-src/: index.js  package-lock.json  package.json
src/: App.tsx  main.tsx  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  main.rs
src/common/: CommonTypes.ts
src/components/: Types.ts
src/components/app/: WindowTitle.tsx
src/components/popups/: AboutPopup.tsx  PreferencesPopup.tsx
src/components/wrappers/: TooltipObjectButton.tsx
src/context/: AntdThemeContext.tsx
src/hooks/: UseTauriUpdater.tsx  UseWindowStateListener.tsx
src/localization/: Localization.ts
src/localization/en/: messages.json  settings.json  ui.json
src/localization/fi/: messages.json  settings.json  ui.json
src/localization/rust_i18n_transform/: .eslintrc.cjs  README.md  index.ts  package-lock.json  package.json  tsconfig.json
src/menu/: AppMenu.tsx  AppMenuToolbar.tsx  AppToolbar.tsx  MenuItems.tsx  ToolbarItems.tsx
src/utilities/app/: Images.ts  Settings.ts
